APPLICATIONS/springboot-kubernetes-ingress-lb/kubernates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springboot-ingress
spec:
  rules:
    - host: espark.com
      http:
        paths:
          - path: /v1/api/address
            backend:
              serviceName: espark-address-service
              servicePort: 8080
          - path: /v1/api/employee
            backend:
              serviceName: espark-employee-service
              servicePort: 8080
    - host: localhost
      http:
        paths:
          - path: /v1/api/address
            backend:
              serviceName: espark-address-service
              servicePort: 8080
          - path: /v1/api/employee
            backend:
              serviceName: espark-employee-service
              servicePort: 8080
